// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite component red renders correctly 1`] = `
".a {
  position: absolute;
}
.b {
  right: 16px;
}
.c {
  top: 0;
}
.d {
  font-size: 40px;
}
.e {
  color: #ed4f4f;
}
.h {
  transition: all 0.3s ease-in-out 0s;
}
.i::before {
  content: \\"♥\\";
}
.f:hover {
  cursor: pointer;
}
.g:hover {
  transform: scale(1.2);
}


<div className=a b c d e f g h i />;
"
`;

exports[`Favorite component renders correctly 1`] = `
".a {
  position: absolute;
}
.b {
  right: 16px;
}
.c {
  top: 0;
}
.d {
  font-size: 40px;
}
.e {
  color: #ededed;
}
.h {
  transition: all 0.3s ease-in-out 0s;
}
.i::before {
  content: \\"♥\\";
}
.f:hover {
  cursor: pointer;
}
.g:hover {
  transform: scale(1.2);
}


<div className=a b c d e f g h i />;
"
`;
